--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,12 @@ project(stlcat)
 
 include_directories(include)
 
-add_library(stl3d src/stl3d.c)
-add_library(vec3 src/vec3.c)
+set(LIBS tri vec3)
+set(EXTERNAL_LIBS m)
+
+foreach(L IN LISTS LIBS)
+    add_library(${L} src/${L}.c)
+endforeach()
 
 add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.c)
-target_link_libraries(${PROJECT_NAME} stl3d vec3 m)
+target_link_libraries(${PROJECT_NAME} ${LIBS} ${EXTERNAL_LIBS})
