Terminal canvas printing with halfblocks and colors oh my god i am so cool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 4.0)
+set(C_STANDARD_REQUIRED C17)
+
 project(stlcat)
 
 include_directories(include)
 
-set(LIBS vec3 tri solid stlrender)
+set(LIBS vec3 tri solid render terminal)
 set(EXTERNAL_LIBS m)
 
 foreach(L IN LISTS LIBS)
@@ -11,7 +13,7 @@ foreach(L IN LISTS LIBS)
 endforeach()
 
 
-target_link_libraries(stlrender vec3)
+target_link_libraries(render vec3)
 
 
 add_executable(${PROJECT_NAME} src/${PROJECT_NAME}.c)
