--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project(stlcat)
 set(C_STANDARD_REQUIRED C17)
 
 set(CMAKE_C_FLAGS "-Wall -Wextra") 
-set(CMAKE_C_FLAGS_DEBUG "-O0 -g -v")
+set(CMAKE_C_FLAGS_DEBUG "-O0 -g")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 
 include_directories(include)
